--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: var(--font-roboto);
-  background-color: #212426;
+  background-color: #395886;
 }
 
 .app {
@@ -30,9 +30,9 @@ h1 {
   font-size: 3rem;
   letter-spacing: 0.9px;
   background: linear-gradient(
-    90deg,
-    rgba(249, 211, 180, 1) 0%,
-    rgba(249, 211, 180, 0) 100%
+    100deg,
+    rgb(240, 243, 250) 0%,
+    rgba(240, 243, 250, 0.07) 100%
   );
   background-clip: text;
   -webkit-background-clip: text;
@@ -50,9 +50,9 @@ h1 {
 
   padding: 1.5rem 1.75rem;
   border-radius: 3rem;
-  background: #1f2123;
+  background: #638ecb;
   -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  box-shadow: 5px 5px 7px #2e476c, -5px -5px 7px #395886;
 }
 
 .search input {
@@ -64,8 +64,12 @@ h1 {
   padding-right: 1rem;
 
   outline: none;
-  color: #a1a1a1;
-  background: #1f2123;
+  color: #ffffff;
+  background: #638ecb;
+}
+
+.search input::placeholder {
+  color: #ffffffa9;
 }
 
 .search img {
@@ -159,7 +163,7 @@ h1 {
 
 .movie div:nth-of-type(3) {
   z-index: 2;
-  background-color: #343739;
+  background-color: #638ecb;
   padding: 16px 24px 24px 24px;
 
   position: absolute;
@@ -174,13 +178,13 @@ h1 {
   font-size: 13px;
   letter-spacing: 2px;
   font-weight: 500;
-  color: #f0f0f0;
+  color: #f0f3fa;
 }
 
 .movie div:nth-of-type(3) h3 {
   margin-top: 5px;
   font-family: "Roboto Slab", serif;
-  color: #f9d3b4;
+  color: #f0f3fa;
 }
 
 .movie:hover div:nth-of-type(2) {
